trying to fix bottom border bug with covering the html over the whole viewport

--- a/assets/style/screen.css
+++ b/assets/style/screen.css
@@ -3,8 +3,15 @@
 /*-------------------------------*/
 
 html{
+    height: 100%;
+    width: 100%;
     touch-action: pan-y;
-    background: #556B2F url("../../images/bg/page.png") repeat-y fixed center center;
+    background: #556B2F url("../../images/bg/page.png") no-repeat fixed center center;
+}
+
+body{
+    width: 100%;
+    height: 100%;
 }
 
 html, button{
